--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,10 +1,7 @@
 #:schema node_modules/wrangler/config-schema.json
 name = "nourish"
-main = ".open-next/worker.js"
 compatibility_date = "2024-12-01"
 compatibility_flags = ["nodejs_compat"]
 
-# Static assets configuration
-[assets]
-directory = ".open-next/assets"
-binding = "ASSETS"
+# For Cloudflare Pages
+pages_build_output_dir = ".open-next"
